--- a/gradDisplay.html
+++ b/gradDisplay.html
@@ -16,11 +16,12 @@
             <div></div>
         </header>
 
-        <main>
-            <div class="image"></div>
-            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
-            <a href="./calculate.html"><button></button></a>
-        </main>
+        <!-- grad display -->
+
+        <section class="grade-msg">
+            <div class="msg"></div>
+        </section>
+
 
     </div>
 
