--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <main>
             <div class="image"></div>
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
-            <button> <a href="./calculator.html"> calculate grade</a> </button>  
+            <button> <a href="./calculate.html"> calculate grade</a> </button>  
         </main>
 
 
