--- a/calculate.html
+++ b/calculate.html
@@ -55,7 +55,7 @@
                 </div>
             </div>
 
-            <a href="./gradDisplay.html"><button></button></a>
+            <button><a href="./gradDisplay.html"> calculate </a></button>
 
         </section>
 
