--- a/calculate.html
+++ b/calculate.html
@@ -30,13 +30,19 @@
                 <input id="course-grade" type="text">
             </div>
 
-            <button></button>
+            <button id="add-course"> add course </button>
         </form>
 
         <section class="output">
 
-            <div>  
-                <div class="course-dts">
+            <div class="output-control">  
+                <!-- <div class="course-dts">
+                    <div class="course-output"> computer science</div>
+                    <div class="unit-output"> 3 </div>
+                    <div class="grade-output"> A </div>
+                </div> -->
+    
+                <!-- <div class="course-dts">
                     <div class="course-output"> computer science</div>
                     <div class="unit-output"> 3 </div>
                     <div class="grade-output"> A </div>
@@ -46,16 +52,10 @@
                     <div class="course-output"> computer science</div>
                     <div class="unit-output"> 3 </div>
                     <div class="grade-output"> A </div>
-                </div>
-    
-                <div class="course-dts">
-                    <div class="course-output"> computer science</div>
-                    <div class="unit-output"> 3 </div>
-                    <div class="grade-output"> A </div>
-                </div>
+                </div> -->
             </div>
 
-            <button><a href="./gradDisplay.html"> calculate </a></button>
+            <button id="calculate"><a href="./gradDisplay.html"> calculate </a></button>
 
         </section>
 
