--- a/calculate.html
+++ b/calculate.html
@@ -27,7 +27,17 @@
             </div>
 
             <div class="input-control">
-                <input id="course-grade" type="text">
+                <div id="course-grade" type="text">
+                    <p id="grade-value"></p> 
+                    <div class="grade-options">
+                        <div id="grade">A</div>
+                        <div id="grade">B</div>
+                        <div id="grade">C</div>  
+                        <div id="grade">D</div>
+                        <div id="grade">E</div>
+                        <div id="grade">F</div>
+                    </div>
+                </div> 
             </div>
 
             <button id="add-course"> add course </button>
