--- a/calculate.html
+++ b/calculate.html
@@ -50,6 +50,8 @@
             </div>
 
             <p id="unit-Total"></p>
+            <p id="course-Total"></p>
+            <p id="gpa"></p>
             <button id="calculate"><a href="./gradDisplay.html"> calculate </a></button>
 
         </section>
