--- a/calculate.html
+++ b/calculate.html
@@ -9,8 +9,7 @@
 <body>
     
     <div class="container">
-        
-        <!-- landing screen  -->
+
         <header>
             <div></div>
             <div></div>
@@ -60,5 +59,6 @@
 
 
     <script src="./main.js"></script>
+    <script src="./calculate.js"></script>
 </body>
 </html>
