--- a/index.html
+++ b/index.html
@@ -11,12 +11,20 @@
     <div class="container">
 
         <header>
-            <div></div>
-            <div></div>
+            <div id="logo"></div>
+            <div class="theme-icons">
+                <img id="moon" src="./assets/star-and-crescent.svg" alt="moon">
+                <img id="sun" src="./assets/sun.svg" alt="sun">
+            </div>
         </header>
 
         <main>
-            <div class="image"></div>
+            <div class="image">
+                <div id="border"></div>
+                <div id="border"></div>
+
+                <h1 id="msg">Welcome</h1>
+            </div>
             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
             <button> <a href="./calculate.html"> calculate grade</a> </button>  
         </main>
