html code adjustments

--- a/calculate.html
+++ b/calculate.html
@@ -10,9 +10,13 @@
     
     <div class="container">
 
+
         <header>
-            <div></div>
-            <div></div>
+            <div id="logo"></div>
+            <div class="theme-icons">
+                <img id="moon" src="./assets/star-and-crescent.svg" alt="moon">
+                <img id="sun" src="./assets/sun.svg" alt="sun">
+            </div>
         </header>
 
         <!-- calculator screen -->
