--- a/gradDisplay.html
+++ b/gradDisplay.html
@@ -10,8 +10,11 @@
 <body>
     <div class="container">
         <header>
-            <div></div>
-            <div></div>
+            <div id="logo"></div>
+            <div class="theme-icons">
+                <img id="moon" src="./assets/star-and-crescent.svg" alt="moon">
+                <img id="sun" src="./assets/sun.svg" alt="sun">
+            </div>
         </header>
 
         <!-- grad display -->
