--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <div id="border"></div>
                 <h1 id="msg">Welcome</h1>
             </div>
-            <p> Hi there, click on the button below to calculate your grade </p>
-            <button> <a href="./calculate.html"> calculate grade</a> </button>  
+            <p id="home-msg"> Hi there, click on the button below to calculate your grade </p>
+            <a href="./calculate.html"><button id="calculate"> calculate grade </button> </a> 
         </main>
 
     </div>
