--- a/calculate.html
+++ b/calculate.html
@@ -62,6 +62,7 @@
         <div id="close"></div>
 
         <p id="unit-Total"></p>
+        <p id="course-Total"></p>
         <p id="gpa"></p>
     </div>
 
