--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <main>
             <div class="image">
                 <div id="border"></div>
-                <img id="hello-svg" src="/assets/Hello-rafiki.svg" alt="rafiki">
+                <img id="hello-svg" src="./assets/Hello-rafiki.svg" alt="rafiki">
                 <div id="border"></div>
             </div>
             <p id="home-msg"> Hi there, click on the button below to calculate your grade </p>
