--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="image">
                 <div id="border"></div>
                 <div id="border"></div>
-                <h1 id="msg">Welcome</h1>
+                <img src="/assets/Hello-rafiki.svg" alt="rafiki">
             </div>
             <p id="home-msg"> Hi there, click on the button below to calculate your grade </p>
             <a href="./calculate.html"><button id="calculate"> calculate grade </button> </a> 
