--- a/calculate.html
+++ b/calculate.html
@@ -12,8 +12,8 @@
     <div class="container">
 
         <header>
-            <div id="logo"></div>
-            <div class="theme-icons">
+            <!-- <div id="logo"></div>
+            <div class="theme-icons"> -->
         </header>
 
         <!-- calculator screen -->
