--- a/index.html
+++ b/index.html
@@ -12,14 +12,18 @@
 
         <header>
             <div id="logo"></div>
-            <div class="theme-icons">
+            <div id="hamburger-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </header>
 
         <main>
             <div class="image">
                 <div id="border"></div>
+                <img id="hello-svg" src="/assets/Hello-rafiki.svg" alt="rafiki">
                 <div id="border"></div>
-                <img src="/assets/Hello-rafiki.svg" alt="rafiki">
             </div>
             <p id="home-msg"> Hi there, click on the button below to calculate your grade </p>
             <a href="./calculate.html"><button id="calculate"> calculate grade </button> </a> 
