--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <header>
             <div id="logo"></div>
             <div id="hamburger-menu">
-                <span></span>
-                <span></span>
-                <span></span>
+                <div></div>
+                <div></div>
+                <div></div>
             </div>
         </header>
 
@@ -25,8 +25,8 @@
                 <img id="hello-svg" src="/assets/Hello-rafiki.svg" alt="rafiki">
                 <div id="border"></div>
             </div>
-            <p id="home-msg"> Hi there, click on the button below to calculate your grade </p>
-            <a href="./calculate.html"><button id="calculate"> calculate grade </button> </a> 
+            <p id="home-msg"> Hi there, click on the button below to calculate your GPA/CGPA </p>
+            <a href="./calculate.html"><button id="calculate"> calculate gpa </button> </a> 
         </main>
 
     </div>
