--- a/calculate.html
+++ b/calculate.html
@@ -11,10 +11,7 @@
     <div class="blur"></div>
     <div class="container">
 
-        <header>
-            <!-- <div id="logo"></div>
-            <div class="theme-icons"> -->
-        </header>
+        <a id="back" href="./index.html"> <img  src="./assets/arrow-small-left.svg" alt="arrow"> </a>
 
         <!-- calculator screen -->
         <form class="input">
