--- a/calculate.html
+++ b/calculate.html
@@ -16,11 +16,11 @@
         <!-- calculator screen -->
         <form class="input">
             <div class="input-control">
-                <input id="course-name" type="text" placeholder="enter course code">
+                <input id="course-name" type="text" placeholder="xxx xxx">
             </div>
             
             <div class="input-control">
-                <input id="course-unit" type="text" maxlength="2" placeholder="unit">
+                <input id="course-unit" type="text" maxlength="2" placeholder="0">
             </div>
 
             <div class="input-control">
