--- a/calculate.html
+++ b/calculate.html
@@ -53,11 +53,19 @@
 
     <!-- result display tab -->
     <div class="result-display">
-        <div id="close"></div>
+        <span id="close">X</span>
 
-        <p id="unit-Total"></p>
+        <div class="unit">
+            <p>Total unit = </p>
+            <p id="unit-Total"></p>
+        </div>
+
         <p id="course-Total"></p>
-        <p id="gpa"></p>
+
+        <div class="grade"> 
+            <h1>Your gpa</h1>
+            <p id="gpa"></p>
+        </div>
     </div>
 
 
