--- a/calculate.html
+++ b/calculate.html
@@ -53,7 +53,7 @@
 
     <!-- result display tab -->
     <div class="result-display">
-        <span id="close">X</span>
+        <span id="close"></span>
 
         <div class="unit">
             <p>Total unit = </p>
