--- a/calculate.html
+++ b/calculate.html
@@ -11,7 +11,15 @@
     <div class="container">
         <div class="blur"></div>
 
-        <a id="back" href="./index.html"> <img  src="./assets/arrow-small-left.svg" alt="arrow"> </a>
+        <nav>
+            <a id="back" href="./index.html"> <img  src="./assets/arrow-small-left.svg" alt="arrow"> </a>
+
+            <div id="info">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </nav>
 
         <!-- calculator screen -->
         <form class="input">
@@ -55,6 +63,9 @@
     <div class="result-display">
         <span id="close"></span>
 
+        <!-- <img id="celebrating" src="./assets/undraw_celebrating_rtuv.svg" alt="celebrating"> -->
+        <img id="happy-announcement" src="./assets/undraw_happy_announcement_re_tsm0.svg" alt="happy announcement">
+
         <div class="unit">
             <p>Total unit = </p>
             <p id="unit-Total"></p>
@@ -63,7 +74,7 @@
         <p id="course-Total"></p>
 
         <div class="grade"> 
-            <h1>Your gpa</h1>
+            <h1>Your gpa is</h1>
             <p id="gpa"></p>
         </div>
     </div>
