--- a/calculate.html
+++ b/calculate.html
@@ -10,6 +10,7 @@
     
     <div class="container">
         <div class="blur"></div>
+        <div class="loader"></div>
 
         <nav>
             <a id="back" href="./index.html"> <img  src="./assets/arrow-small-left.svg" alt="arrow"> </a>
