--- a/index.html
+++ b/index.html
@@ -97,9 +97,7 @@
 
                         <div class="message">
                             <em>Hi There,</em> <br> <br>
-                            <p>
-                                congrats you are a first class student, keep up the good work
-                            </p>
+                            <p id="class-msg"></p>
                         </div>
                 
                         <div class="unit">
