--- a/index.html
+++ b/index.html
@@ -125,6 +125,32 @@
     
             <section class="info-tab">
                 <div id="close-info"></div>
+
+                <h1>overview on how the gpa is calculated</h1>
+
+                <article class="calc-process">
+                    <section class="step">
+                        <p>step 1</p>
+                        <div class="arrow"></div>
+                    </section>
+
+                    <section class="step">
+                        <p>step 2</p>
+                        <div class="arrow"></div>
+                    </section>
+
+
+                    <section class="step">
+                        <p>step 3</p>
+                        <div class="arrow"></div>
+                    </section>
+
+
+                    <section class="step">
+                        <p>step 4</p>
+                        <div class="arrow"></div>
+                    </section>
+                </article>
             </section>
     
         <!-- info section -->
