--- a/index.html
+++ b/index.html
@@ -130,26 +130,26 @@
 
                 <article class="calc-process">
                     <section class="step">
-                        <p>step 1</p>
-                        <div class="arrow"></div>
+                        <div class="head">
+                            <p>Step 1</p>
+                            <div class="arrow"></div>
+                        </div>
+
+                        <div class="dts">
+                            <p>Grade value equivalent</p>
+                            <ul>
+                                <li> A = 5</li>
+                                <li> B = 4</li>
+                                <li> C = 3</li>
+                                <li> D = 2</li>
+                                <li> E = 1</li>
+                                <li> F = 0</li>
+                            </ul>
+                        </div>
+
                     </section>
 
-                    <section class="step">
-                        <p>step 2</p>
-                        <div class="arrow"></div>
-                    </section>
-
-
-                    <section class="step">
-                        <p>step 3</p>
-                        <div class="arrow"></div>
-                    </section>
-
-
-                    <section class="step">
-                        <p>step 4</p>
-                        <div class="arrow"></div>
-                    </section>
+                   
                 </article>
             </section>
     
