--- a/index.html
+++ b/index.html
@@ -131,12 +131,11 @@
                 <article class="calc-process">
                     <section class="step">
                         <div class="head">
-                            <p>Step 1</p>
+                            <p>grade value equivalent</p>
                             <div class="arrow"></div>
                         </div>
 
                         <div class="dts">
-                            <p>Grade value equivalent</p>
                             <ul>
                                 <li> A = 5</li>
                                 <li> B = 4</li>
@@ -146,7 +145,71 @@
                                 <li> F = 0</li>
                             </ul>
                         </div>
+                    </section>
 
+
+                    <section class="step">
+                        <div class="head">
+                            <p>Degree class</p>
+                            <div class="arrow"></div>
+                        </div>
+
+                        <div class="dts">
+                            <ul>
+                                <li> first class = 4.5 and above</li>
+                                <li> second class upper = unknown</li>
+                                <li> second class lower = unknown</li>
+                                <li> third class = unknown</li>
+                                <li> pass = unknown</li>
+                            </ul>
+
+                        </div>
+                    </section>
+
+
+                    <section class="step">
+                        <div class="head">
+                            <p> step 1</p>
+                            <div class="arrow"></div>
+                        </div>
+
+                        <div class="dts">
+                            <p>Get the grade unit equivalent</h3><br><br>
+                            <p>for each course you multiply the unit by the grade value equivalent e.g</p>
+
+                            <div class="step-example">
+                                <p>Gns 111</p> 
+                                <p>3</p>
+                                <p>A</p>
+                            </div>
+
+                            <p>where A = 5, the GUE is = 15</p>
+
+
+                        </div>
+                    </section>
+
+
+                    <section class="step">
+                        <div class="head">
+                            <p> step 1</p>
+                            <div class="arrow"></div>
+                        </div>
+
+                        <div class="dts">
+                            <p>Get the grade unit equivalent</h3><br><br>
+                            <p>for each course you multiply the unit by the grade value equivalent e.g</p>
+
+                            <div class="step-example">
+                                <p>Gns 111</p> 
+                                <p>3</p>
+                                <p>A</p>
+                            </div>
+
+                            <p>where A = 5, the GUE is = 15</p>
+
+
+                        </div>
                     </section>
 
                    
