--- a/index.html
+++ b/index.html
@@ -192,21 +192,27 @@
 
                     <section class="step">
                         <div class="head">
-                            <p> step 1</p>
+                            <p> step 2</p>
                             <div class="arrow"></div>
                         </div>
 
                         <div class="dts">
-                            <p>Get the grade unit equivalent</h3><br><br>
-                            <p>for each course you multiply the unit by the grade value equivalent e.g</p>
+                            <p>Get the unit total</h3><br><br>
+                            <p>for each course you add up all the unit </p>
 
                             <div class="step-example">
                                 <p>Gns 111</p> 
                                 <p>3</p>
-                                <p>A</p>
+                                <p>B</p>
                             </div>
 
-                            <p>where A = 5, the GUE is = 15</p>
+                            <div class="step-example">
+                                <p>Gns 111</p> 
+                                <p>1</p>
+                                <p>C</p>
+                            </div>
+
+                            <p>Total unit for the above example is 4 </p>
 
 
                         </div>
