--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="shortcut icon" href=""> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="description" content="a gpa calculator for college students">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    
     <link rel="stylesheet" href="./css/index.css">
     <title>UC</title>
 </head>
