--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 
                 <form class="input">
                     <div class="input-control">
-                        <input id="course-name" type="text" placeholder="Enter course name">
+                        <input id="course-name" type="text">
                     </div>
                     
                     <div class="input-control">
-                        <input id="course-unit" type="text" maxlength="2" placeholder="unit">
+                        <input id="course-unit" type="text" maxlength="2">
                     </div>
     
                     <div class="input-control">
