--- a/index.html
+++ b/index.html
@@ -275,6 +275,16 @@
         <!-- info section -->
 
 
+        <!-- instructions -->
+
+        <div class="instruction-icon">i</div>
+        
+        <section class="instructions">
+            <div id="close-instruction"></div>
+        </section>
+        <!-- instructions -->
+
+
     </div>
 
     <script src="./main.js"></script>
