--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@
                         <div class="dts">
                             <ul>
                                 <li> first class = 4.5 and above</li>
-                                <li> second class upper = unknown</li>
-                                <li> second class lower = unknown</li>
-                                <li> third class = unknown</li>
-                                <li> pass = unknown</li>
+                                <li> second class upper = 3.50 - 4.49</li>
+                                <li> second class lower = 2.40 - 3.49</li>
+                                <li> third class = 1.50 - 2.39</li>
+                                <li> pass = 1.00 - 1.49</li>
                             </ul>
 
                         </div>
