--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
                     <section class="step">
                         <div class="head">
-                            <p>Degree class</p>
+                            <p>degree class</p>
                             <div class="arrow"></div>
                         </div>
 
